<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/name"
                android:hint="@string/hint_name"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/family"
                android:hint="@string/hint_family"
                android:layout_below="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/age"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:layout_below="@+id/family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/phone_num"
                android:hint="@string/hint_phone"
                android:layout_below="@+id/age"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/saveBtn"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_btn"
                android:background="@color/colorAccent"
                android:layout_margin="5dp"
                android:layout_below="@id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>